--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-basic-styles": "^41.4.2",
+    "@ckeditor/ckeditor5-dev-utils": "^40.2.2",
+    "@ckeditor/ckeditor5-editor-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-essentials": "^41.4.2",
+    "@ckeditor/ckeditor5-paragraph": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^7.0.0",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "@swc/helpers": "~0.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "ts-loader": "^9.5.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -35,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "babel-jest": "^29.4.1",
+    "css-loader": "^5.2.7",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.27.5",
@@ -44,8 +52,11 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "nx": "16.10.0",
+    "postcss-loader": "^4.3.0",
     "prettier": "^2.6.2",
+    "raw-loader": "^4.0.2",
     "react-refresh": "^0.10.0",
+    "style-loader": "^2.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3",
